# polychromy

./: CHANGELOG.md  MANIFEST.in  README.md  RELEASE_NOTES.md  colours.json  polychromy.py  pyproject.toml  requirements.txt  setup.py
data/: colors.json
dynamic_data/: colorlive.json  livecolors.json
polychromy/: __init__.py  polychromy.py
polychromy/data/: colors.json
