[build-system]
# Minimum versions ensure modern packaging features work
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polychromy"

# Version is now dynamic, setuptools_scm will infer it from Git tags
dynamic = ["version"]

description = "A module to print strings in a given colour, with a given colour background"

readme = "README.md"
license = { text = "MIT License" }

authors = [
    { name = "scalvaruso", email = "calvaruso.simone@gmail.com" },
]

requires-python = ">=3.9"
dependencies = ["textlinebreaker >= 1.0.0 ","requests"]

keywords = [
    "ansi", "background", "color", "colour",
    "colorate", "font", "format", "foreground",
    "Hex", "paint", "RGB", "sRGB", "text"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/polychromy"
Repository = "https://github.com/scalvaruso/polychromy"
Issues = "https://github.com/scalvaruso/polychromy/issues"

[tool.setuptools_scm]
# How version numbers are generated
version_scheme = "post-release"
local_scheme = "no-local-version"
